--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
     position: relative;
 }
 .form-box{
-    background-color: rgb(227, 165, 165);
+    background-color: lightblue;
     width: 70%;
     max-width:455px;
     border-radius:20px;
